Add image and theme wrapper

--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@ ul {
 
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 3em 30em;
+    /* grid-template-rows: 3em 30em; */
     grid-template-areas: 
     'nav-wrapper nav-wrapper'
     'left-column right-column'
@@ -154,6 +154,13 @@ ul {
 
 .left-column {
     grid-area: left-column;
+}
+
+#profile-pic {
+    height: 200px;
+    width: 200px;
+    object-fit: cover;
+    border: 2px solid var(--borderColor);
 }
 
 .right-column {
