--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,17 @@
 :root {
-    --mainColor: #e6ddd7;
+    --mainColor: #eaeaea;
     --secondaryColor: #fff;
 
     --borderColor: #c1c1c1;
 
     --mainText: #110f08;
-    --secondaryText: #695142; /*4b5156*/
+    --secondaryText: #4b5156;
+    /*695142*/
 
-    --themeDotBorder: #fafafa;
+    --themeDotBorder: #0a0808;
 
     --previewBg: rgb(251, 249, 243, 0.8);
-	--previewShadow: #f0ead6;
+    --previewShadow: #f0ead6;
 }
 
 html,
@@ -19,10 +20,15 @@ body {
     padding: 0;
 }
 
-h2, h3, h4, h5, h6, strong {
-    color: var(--secondaryText);
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
+h2,
+h3,
+h4,
+h5,
+h6,
+strong {
+    color: var(--mainText);
+    font-family: 'Russo One', sans-serif;
+    font-weight: 500;
 }
 
 h1 {
@@ -32,29 +38,34 @@ h1 {
     letter-spacing: 4px;
 }
 
-h2{
-	font-size: 36px;
+h2 {
+    font-size: 36px;
 }
 
-h3{
-	font-size: 28px;
+h3 {
+    font-size: 28px;
 }
 
-h4{
-	font-size: 24px;
+h4 {
+    font-size: 24px;
 }
 
-h5{
-	font-size: 20px;
+h5 {
+    font-size: 20px;
 }
 
-h6{
-	font-size: 16px;
+h6 {
+    font-size: 16px;
 }
 
-p, li, span, label, input, textarea {
-    color: var(--seondaryText);
-    font-family: 'Roboto', sans-serif;
+p,
+li,
+span,
+label,
+input,
+textarea {
+    color: var(--secondaryText);
+    font-family: 'Roboto Mono', monospace;
 }
 
 a {
@@ -92,16 +103,16 @@ ul {
 
 .intro-wrapper {
     border-radius: 10px;
-    background: var(--mainColor);
-    box-shadow:  20px 20px 60px #c4bcb7, 
-             -20px -20px 60px #fffef7;
+    background: var(--secondaryColor);
+    box-shadow: 20px 20px 60px #c7c7c7,
+        -20px -20px 60px #ffffff;
 
     display: grid;
     grid-template-columns: 1fr 1fr;
     /* grid-template-rows: 3em 30em; */
-    grid-template-areas: 
-    'nav-wrapper nav-wrapper'
-    'left-column right-column'
+    grid-template-areas:
+        'nav-wrapper nav-wrapper'
+        'left-column right-column'
     ;
 }
 
@@ -150,9 +161,9 @@ ul {
     border-radius: 50%;
     margin: 5px;
 
-    -webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-    -moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-    box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
+    -webkit-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+    box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
 
 }
 
@@ -184,9 +195,9 @@ ul {
     margin: 5px;
     border: 2px solid var(--themeDotBorder);
 
-    -webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-    -moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-    box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
+    -webkit-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+    box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
     cursor: pointer;
 }
 
@@ -199,15 +210,15 @@ ul {
 }
 
 #blue-mode {
-    background-color: #c8baec;
+    background-color: #192734;
 }
 
 #green-mode {
-    background-color: #a6e7ba;
+    background-color: #78866b;
 }
 
 #pink-mode {
-    background-color: #ecbad2;
+    background-color: #7E4C74;
 }
 
 #settings-note {
@@ -225,21 +236,169 @@ ul {
     padding-bottom: 50px;
 }
 
-#preview-shadow{
-	background-color: var(--previewShadow);
-	border-radius: 50% 20% / 10% 40%;
-	width: 300px;
-	height: 180px;
-	padding-left: 30px;
-	padding-top: 30px;
+#preview-shadow {
+    background-color: var(--previewShadow);
+    max-width: 300px;
+    height: 180px;
+    padding-left: 30px;
+    padding-top: 30px;
 }
 
-#preview{
-	width: 300px;
-	background-color: var(--previewBg);
-	border-radius: 50% 20% / 10% 40%;
-	padding: 15px 25px;
-	position: relative;
+#preview {
+    width: 300px;
+    border: 1.5px solid #17a2b8;
+    background-color: var(--previewBg);
+    padding: 15px;
+    position: relative;
+}
+
+.corner {
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    border: 1.5px solid #17a2b8;
+    background-color: #fff;
+    position: absolute;
+}
+
+#corner-tl {
+    top: -5px;
+    left: -5px
+}
+
+#corner-tr {
+    top: -5px;
+    right: -5px
+}
+
+
+#corner-br {
+    bottom: -5px;
+    right: -5px
+}
+
+
+#corner-bl {
+    bottom: -5px;
+    left: -5px
+}
+
+.about-wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.skills {
+    display: flex;
+    justify-content: space-evenly;
+    background-color: var(--previewShadow);
+}
+
+.timeline {
+    max-width: 1200px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.timeline::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 6px;
+    background: var(--previewShadow);
+    left: 50%;
+    margin-left: -3px;
+}
+
+.container {
+    padding: 10px 40px;
+    position: relative;
+    width: 50%;
+}
+
+.container::after {
+    content: '';
+    position: absolute;
+    top: 15px;
+    right: -17px;
+    width: 25px;
+    height: 25px;
+    background: var(--previewShadow);
+    border-radius: 50%;
+    border: 4px solid var(--previewBg);
+}
+
+.left {
+    left: 0;
+}
+
+.right {
+    left: 40%;
+}
+
+.right::after {
+    left: -16px;
+}
+
+.left::before {
+    content: '';
+    height: 0px;
+    width: 0px;
+    position: absolute;
+    top: 22px;
+    right: 30px;
+    border: 10px solid #fff;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent var(--previewShadow);
+}
+
+.right::before {
+    content: '';
+    height: 0px;
+    width: 0px;
+    position: absolute;
+    top: 22px;
+    left: 30px;
+    border: 10px solid var(--previewShadow);
+    border-width: 10px 10px 10px 0;
+    border-color: transparent var(--previewShadow) transparent transparent;
+}
+
+.content {
+    padding: 20px 30px;
+    background: var(--previewShadow);
+    border-radius: 5px;
+}
+
+@media screen and (max-width: 600px) {
+    .timeline::after {
+        left: 31px;
+    }
+
+    .container {
+        width: 80%;
+        padding-left: 70px;
+        padding-right: 5px;
+    }
+
+    .container::before {
+        left: 60px;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent #fff transparent transparent;
+    }
+
+    .left::after,
+    .right::after {
+        left: 15px;
+        z-index: 1;
+    }
+
+    .right {
+        left: 0;
+    }
 }
 
 @media screen and (max-width: 1200px) {
@@ -251,12 +410,13 @@ ul {
 @media screen and (max-width: 800px) {
     .intro-wrapper {
         grid-template-columns: 1fr;
-        grid-template-areas: 
-        'nav-wrapper'
-        'left-column'
-        'right-column'
+        grid-template-areas:
+            'nav-wrapper'
+            'left-column'
+            'right-column'
         ;
     }
+
     .right-column {
         justify-content: center;
     }
